# lib/validation/semantic-validation.ts
@@ -1,6 +1,8 @@
 import { Customization } from "../database/user";
 import { BadRequest } from "../web/response";
-import { getBoolean, getInt, getString } from "./type-validation";
+import { getBoolean, getInt, getObject, getString } from "./type-validation";
+
+export type Order = { [index: string]: 'asc' | 'desc'; };
 
 const usernameRegex = /^(?:\w|-| ){3,32}$/;
 const emailRegex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
@@ -62,5 +64,15 @@ export function getName(raw: any): string {
     const parsed = getString(raw);
     if(parsed.length < 3 || parsed.length > 32)
         throw new BadRequest();
+    return parsed;
+}
+
+export function getOrder(raw: any): Order {
+    const parsed: any = getObject(raw);
+    for(const index in Object.keys(parsed)) {
+        const order = parsed[index];
+        if(order != 'asc' && order != 'desc')
+            throw new BadRequest();
+    }
     return parsed;
 }
